<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/wel_admin"
            android:textSize="22sp"
            android:textColor="@color/wel_text_color"
            android:textStyle="bold" />



        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/desc"
            android:textSize="22sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btnview"
            android:id="@+id/btnview"
            android:layout_gravity="center"
            android:paddingStart="25sp"
            android:paddingEnd="25sp"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/desc_fuel_cost"
            android:textSize="22sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btnprice"
            android:id="@+id/btnsum"
            android:layout_gravity="center"
            android:paddingStart="25sp"
            android:paddingEnd="25sp"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="22sp" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>