<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelDataEntry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"

                android:text="@string/info"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/date"/>
                <EditText
                    android:id="@+id/e1"
                    android:layout_width="190dp"
                    android:inputType="date"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/vno"/>
                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/e2"
                    android:inputType="number"
                    android:importantForAutofill="no" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/ometer"/>
                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/e3"
                    android:inputType="number"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/fuel"/>
                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/e4"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/price"/>
                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/e5"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAdd"
                    android:onClick="cliclAdd"
                    android:text="@string/btnfuel">

                </Button>

            </LinearLayout>





        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>