<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFuelData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/fData"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/tv1"
                    android:textSize="22sp"
                   />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/vno"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22sp"
                    android:id="@+id/tv2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"

                    android:textSize="22sp"
                    android:text="@string/ometer"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/fuel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22sp"
                    android:id="@+id/tv4"
                   />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22sp"
                    android:id="@+id/tv5"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCon"
                    android:text="@string/btnconf">
                </Button>

            </LinearLayout>




        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>